as2/5.1/modules/ROOT/pages/index.adoc
= AS2 Connector - Get Started - Mule 4
:page-aliases: connectors::as2/as2-connectorMule4.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

AS2 Connector Version 5.1

Mule runtime engine (Mule) supports the AS2 protocol through the Anypoint Connector for AS2 (AS2 Connector).

The AS2 Connector enables trading partners to transmit and receive AS2 messages with EDI-X12, EDIFACT, XML, or binary payloads. For example:

* Send messages, signed or unsigned, over HTTP or HTTPS, following the AS2 protocol

* Receive messages, also over HTTP or HTTPS, following the AS2 protocol

* Receive asynchronous MDN for the message sent

Release Notes: xref:release-notes::connector/as2-connector-release-notes-mule-4.adoc[AS2 Connector Release Notes]

== About Connectors

Anypoint connectors are Mule runtime engine extensions that enable you to connect
to APIs and resources on external systems, such as X12 and RosettaNet.

== Prerequisites

Before creating an app, you must have access to the AS2 target resource and
Anypoint Platform. You also need understand how to create a Mule app using Anypoint Studio.
You should have familiarity with AS2.

=== Considerations when Migrating from the AS2 connector 4.x

The AS2 version 5 connector requires the `Async MDN` to be handled as a separate flow. The retry of AS2 Message Send is not automatic. The application has to handle the retry upon failure in an MDN or upon failure to receive an MDN.

Version 5 enables you to reuse the application HTTP listener configuration. Refer to xref:as2-connector-upgrade-migrate.adoc[Upgrade and Migrate] for more information.

== Audience

* Starting user -- To create your Mule app,
see xref:as2-connector-studio.adoc[Studio Configuration]. The
xref:as2-connector-examples.adoc[Examples] topic provides one or more use cases for using the connector.
* Power user - Read the xref:as2-connector-xml-maven.adoc[XML and Maven Support],
and xref:as2-connector-examples.adoc[Examples] topics.

== Common Use Cases For the Connector

* Send with sync MDN

Sends a message through HTTP or HTTPS using the AS2 protocol requesting the partner for a synchronous MDN (receipt).

* Send with async MDN

Sends a message through HTTP or HTTPS using the AS2 protocol requesting the partner for an asynchronous MDN (receipt).

* Listener

Source that receives messages via HTTP or HTTPS using the AS2 protocol.

* MDN Listener

Source that receives asynchronous MDN receipts via HTTP or HTTPS using the AS2 protocol.

// a link to the xref:as2-connector-examples.adoc[Examples] use cases.

== Next Step

After you have met the prerequisites and experimented with templates and examples, you are ready to create an app with
xref:as2-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-as2-connector/[AS2 Connector on Anypoint Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
