as2/6.0/modules/ROOT/pages/index.adoc
= AS2 Connector - Get Started - Mule 4
:page-aliases: connectors::as2/as2-connectorMule4.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

AS2 Connector Version 6.0

Mule runtime engine (Mule) supports the AS2 protocol through the Anypoint Connector for AS2 (AS2 Connector).

The AS2 Connector enables trading partners to transmit and receive AS2 messages with EDI-X12, EDIFACT, XML, or binary payloads. For example:

* Send messages, signed or unsigned, over HTTP or HTTPS, following the AS2 protocol

* Receive messages, also over HTTP or HTTPS, following the AS2 protocol

* Receive asynchronous MDN for the message sent

Release Notes: xref:release-notes::connector/as2-connector-release-notes-mule-4.adoc[AS2 Connector Release Notes]

== About Connectors

Anypoint connectors are Mule runtime engine extensions that enable you to connect
to APIs and resources on external systems, such as X12 and RosettaNet.

== Prerequisites

Before creating an app, you must have access to the AS2 target resource and
Anypoint Platform. You also need understand how to create a Mule app using Anypoint Studio.
You should have familiarity with AS2.

=== Considerations when Migrating from the AS2 connector 5.x

The AS2 version 6 connector requires Mule 4.3.0 as minimum runtime version. Refer to xref:as2/as2-connector-upgrade-migrate-6-0.adoc[Upgrade and Migrate] for more information.

== Audience

* Starting user -- To create your Mule app,
see xref:as2-connector-studio.adoc[Studio Configuration]. The
xref:as2-connector-examples.adoc[Examples] topic provides one or more use cases for using the connector.
* Power user - Read the xref:as2-connector-xml-maven.adoc[XML and Maven Support],
and xref:as2-connector-examples.adoc[Examples] topics.

== Common Use Cases For the Connector

* Send with sync MDN

Sends a message through HTTP or HTTPS using the AS2 protocol requesting the partner for a synchronous MDN (receipt).

* Send with async MDN

Sends a message through HTTP or HTTPS using the AS2 protocol requesting the partner for an asynchronous MDN (receipt).

* Listener

Source that receives messages via HTTP or HTTPS using the AS2 protocol.

* MDN Listener

Source that receives asynchronous MDN receipts via HTTP or HTTPS using the AS2 protocol.

* Non repudiation Listener

Source that receives signed copy of a receipt and/or a message for persistently storing it for the non-repudiation purposes

// a link to the xref:as2-connector-examples.adoc[Examples] use cases.

== Non-Repudiation Storage of AS2 messages and MDNs

If needed, you can configure non-repudiation storage for your AS2 operations to support regulatory or compliance requirements.

The following prerequisites are for enabling non-repudiation of a message in an AS2 connector:

* Only signed messages and MDNs are eligible for non-repudiation.

* Users must implement and configure a separate Mule flow that acts as a non-repudiation flow.

* This flow has access to the signed mime message that is passed to it along with appropriate non-repudiation specific attributes.

* It is this non-repudiation specific Mule flow’s responsibility to take, store and act upon the message and attributes it receives.

* The name of this non-repudiation flow must be configured on an appropriate listener or operation that has the non-repudiation enabled.

Following sources and operations of AS2 connectors can have Non-Repudiation feature enabled in version 6.

* AS2 Send Sync Operation

* AS2 Send Async Operation

* AS2 Listener

* AS2 MDN Listener

== Next Step

After you have met the prerequisites and experimented with templates and examples, you are ready to create an app with
xref:as2-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-as2-connector/[AS2 Connector on Anypoint Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
